--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,15 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  margin: 0;
+  margin: 0 0 40px;
+  padding-bottom: 25px;
   background-color: #18181b;
 }
+
+
 
 html {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -234,6 +242,11 @@ html {
   height: 150px;
 }
 
+@media screen and (min-width:960px){
+  .engine--main-container {
+    margin-left: calc(50% - 240px);
+  }
+}
 
 @media screen and (max-width:450px){
   .logo, .logo--two, .logos--container {
@@ -270,6 +283,11 @@ html {
   display: grid;
   align-items: center;
   width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 40px;
+  overflow: hidden;
 }
 
 .footer p {
