--- a/src/style.css
+++ b/src/style.css
@@ -278,19 +278,47 @@ html {
 .contact--container {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 40px;
   color: white;
   margin: 20px 20px;
+  text-align: center;
+  justify-content: space-evenly;
 }
 
+.contact--info {
+  width: 275px;
+  background-color: white;
+  border-radius: 55px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #18181b;
+}
+
+.contact--info h3 {
+  font-size: 30px;
+}
+
+
 @media screen and (max-width:850px){
-  .contact--container {
+  .contact--container, .contact--directions {
     flex-direction: column;
+    align-items: center;
   }
+
+  
 }
 
 .contact--directions {
   background-color: white;
+  align-items: center;
+  display: flex;
+  gap: 15px;
+
+}
+
+.contact--directions div {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 /* Footer */
