--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ html {
 .nav--container {
   display: flex;
   justify-content: space-between;
+  
 }
 
 .nav--bar {
@@ -80,16 +81,16 @@ html {
   
 }
 
-.navigation--menu ul {
+.nav--dropdown {
   display: flex;
   padding: 0;
   
 }
-.navigation--menu li {
+.navigation--menu .nav--link {
   list-style-type: none;
   margin: 0 1rem;
 }
-.navigation--menu li a {
+.navigation--menu .nav--link a {
   text-decoration: none;
   display: block;
   width: 100%;
@@ -113,7 +114,7 @@ html {
     display: none;
   }
   
-  .navigation--menu ul {
+  .nav--dropdown {
     display: none;
   }
 
@@ -121,7 +122,7 @@ html {
     height: 230px;
   }
 
-  .navigation--menu.expanded ul {
+  .navigation--menu.expanded .nav--dropdown {
     position: absolute;
     top: 75px;
     left: 0;
@@ -133,16 +134,14 @@ html {
     display: block;
     z-index: 1;
   }
-  .navigation--menu li {
+  .navigation--menu .nav--link {
     text-align: center;
     margin: 0;
-    z-index: 2;
   }
-  .navigation--menu li a {
+  .navigation--menu .nav--link a {
     color: black;
     width: 100%;
     padding: 1.5rem 0;
-    z-index: 3;
   }
 }
 
@@ -151,6 +150,7 @@ html {
 .main--container {
   height: auto;
   color: white;
+  z-index: 0;
 }
 
 .video--container {
