--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 
 
 html {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Noto Sans',Helvetica,Arial,Lucida,sans-serif;
 }
 
 /* Navbar */
@@ -27,15 +27,15 @@ html {
   display: flex;
   align-items: center;
   background-color: #057eff;
-  height: 91px;
-  font-family: 'Inter', sans-serif;
+  height: 80px;
+  font-family: 'Noto Sans',Helvetica,Arial,Lucida,sans-serif;
   gap: 2em;
   position: relative;
   width: 100%;
 }
 
 .nav--icon {
-  height: 45px;
+  height: 35px;
   padding-right: 8px;
   padding-left: 15px;
 }
@@ -45,11 +45,14 @@ html {
   font-weight: bold;
   text-decoration: none;
   transition: .2s;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 13px;
 }
 
 .nav--bar.title {
   justify-content: end;
-  padding-right: 20px;
+  padding-right: 35px;
   font-style: italic;
   font-size: 2rem;
 }
@@ -181,11 +184,24 @@ html {
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 15px;
+  min-height: 675px;
 }
 
 .info--container {
   padding: 20px;
   margin-left: 15px;
+  background-color: rgba(0,0,0,0.5);
+  border-width: 1px;
+  border-color: #555555;
+  padding-top: 6%;
+  padding-right: 10px;
+  padding-bottom: 7%;
+  padding-left: 10px;
+  box-shadow: 0px 20px 18px -6px rgba(0,0,0,0.42);
+  border: 0 solid #333;
+  font-size: 14px;
+  margin-right: 15px;
+  border-color: 
 }
 
 @media screen and (max-width:960px){
@@ -198,8 +214,13 @@ html {
 .champion--container {
   display: flex;
   align-items: center;
-  padding: 20px;
-  min-height: 700px;
+  background-color: rgba(0,0,0,0.5);
+  border-width: 1px;
+  border-color: #555555;
+  padding-right: 10px;
+  padding-left: 10px;
+  box-shadow: 0px 20px 18px -6px rgba(0,0,0,0.42);
+  border: 0 solid #333;
 }
 
 
@@ -233,6 +254,9 @@ html {
 .champion--list li {
   padding-top: 3px;
   padding-bottom: 3px;
+  list-style-type: none;
+  font-size: 13px;
+  font-family: 'Noto Sans',Helvetica,Arial,Lucida,sans-serif;
 }
 
 .fb {
