--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@ html {
 
 body {
   margin: 0 0 40px;
-  padding-bottom: 25px;
   background-color: #18181b!important;
 }
 
@@ -502,6 +501,10 @@ html {
 
 
 /*Contact */
+
+.contact {
+  margin-top: 62px;
+}
 
 .contact--container {
   display: flex;
